# Pazl

./: .gitignore  POM.xml  README.md  conftest.py  index.html  pyproject.toml  pytest.ini
allure-report/: 05fc95ee-eaf0-493a-b96e-428bbe48690e-container.json  086f6942-f99f-4ed5-88b8-d3e6abed66d2-result.json  0c3b090b-35b5-456b-ba97-bb3e41af6bb5-result.json  11813b36-0f0c-45e7-86f2-c79188e1aaf1-result.json  1328f12d-c548-43b8-bc13-35c80f9424fc-result.json  134e8bf5-37e4-4d7f-ab67-b5255c24d011-result.json  1fba41a1-d966-42f5-8a71-60966d28b344-result.json  2344d6ba-c204-49b4-b4fa-b6f0d2fe92ef-result.json  23c9f239-172b-4cab-8e59-8d9014e8842f-result.json  2c7139b9-4f7a-40bb-94ec-999c29d2d9d9-result.json  3053b756-382a-47b7-af90-192463eea54b-result.json  389d6cb1-a2dc-4c0d-9120-d045e964ddde-result.json  4133814e-33b8-4f0f-88b7-31edf03ecccf-result.json  43e0f1af-343a-4e2c-b292-6dff69c7c960-result.json  4b3dbeb6-1d27-42f5-8248-5bbc165a5565-result.json  50e79021-d07c-4d9e-b11e-6e0bbe032de0-result.json  569cb2a8-3021-4307-9e12-b436cd7b5e6f-result.json  591e1efd-f1f9-41ca-acf4-83f5cbe23a0d-result.json  5c204f36-7709-4af4-9bcb-9b05d7765bfd-result.json  5e3c3a9b-4234-41f8-8ed7-758c203c9493-result.json  66eb8766-2bf8-44df-a5d5-361a38265551-result.json  69121f30-9f83-475d-94a8-e349951bf637-result.json  6a1f6bb1-3a74-4d49-9049-69c035c0bf2d-result.json  72084870-32e5-44fd-85db-14e07ab11639-result.json  7d370740-15f9-4974-8470-696732c3833a-result.json  7d46208c-d645-472e-9e90-0d20f46c1d43-result.json  7dc568cf-87af-4ac7-b9d7-c8c5d6bb267c-result.json  (+16 more)
autotests/: conftest.py
(+36 files in other folders)
