[tool.poetry]
name = "pazl"
version = "0.1.0"
description = ""
authors = ["Yuliya Pontnack <ykorobkova@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
selenium = "^4.6.0"
webdriver_manager = "^3.8.4"
flake8 = "^6.0.0"
allure-pytest = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
